--- a/public/platin-vr.com/assets/css/pall-style.css
+++ b/public/platin-vr.com/assets/css/pall-style.css
@@ -42,8 +42,8 @@ header {
 }
 
 .text-shadow {
-    /* text-shadow: 1px 1px #fff; */
-    -webkit-text-stroke: 1px black;
+    text-shadow: 1px 1px #fff;
+    /* -webkit-text-stroke: 1px rgb(221, 221, 221); */
 }
 
 /*==========================================================
